# SupCon

./: .gitignore  README.md  REPORT_TEMPLATE.md  pyproject.toml  train_ce.py  train_linear.py  train_pretrain.py  train_supcon.py
configs/: ce.yaml  config.yaml  linear.yaml  pretrain.yaml
configs/data/: cifar10.yaml
configs/logging/: wandb.yaml
configs/method/: supcon.yaml
configs/model/: resnet.yaml
configs/optim/: ce.yaml  linear.yaml  pretrain.yaml
src/supcon/data/: __init__.py  cifar10.py  transforms.py
src/supcon/losses/: __init__.py  supcon.py
src/supcon/models/: __init__.py  resnet.py
src/supcon/train/: __init__.py  ce.py  linear.py  pretrain.py
src/supcon/utils/: __init__.py  checkpoint.py  hydra_compat.py  logging.py  meters.py  results.py  seed.py
